--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -1,5 +1,57 @@
+@import "../styles.css";
+
 .LandingHeader {
-  background-image: url('../images/forest-landing-page.jpg');
+  background-image: url('../images/knight-landing-page.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100%;
+  max-height: 780px;
+  box-sizing: border-box;
+  padding: 190px 100px 40px 100px;
+}
+
+
+.LandingBannerContainer {
+  color: white;
+  height: 530px;
   width: 100%;
-  height: 800px;
+  display: flex;
+  align-content: center;
+}
+
+.LandingBanner {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
+}
+
+.LandingBannerTitle {
+  font-size: 60px;
+  font-weight: 500;
+}
+
+.LandingBannerSubtitle {
+  padding: 16px 0;
+  width: 200px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.LandingBannerButton {
+  padding: 8px 16px;
+  width: 120px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  background-color: white;
+  color: var(--darkBlue);
+  border: 2px solid var(--darkBlue)
+}
+
+.LandingExploreNearby {
+  height: 2000px;
 }
