--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,17 +1,20 @@
+@import "../styles.css";
+
 .SignupFormContainer {
-  background-color: grey;
+  background-color: var(--lightBlue);
   color: white;
   width: 300px;
   margin: 200px auto;
-  border: 2px solid black;
+  border: 2px solid var(--darkBlue);
   border-radius: 10px;
 }
 
 .SignupFormErrors {
-  width: 60%;
+  width: 90%;
   margin: 10px auto;
   list-style-type: none;
   color: darkred;
+  padding-left: 0;
 }
 
 .SignupFormTitle {
@@ -33,7 +36,7 @@
   margin: 10px auto;
   display: flex;
   border-radius: 5px;
-  background-color: darkgrey;
+  background-color: var(--greyBlue);
 }
 
 .SignupFormInputIcon {
@@ -55,14 +58,14 @@
   font-size: 2em;
   border-radius: 8px;
   margin: 10px auto;
-  background-color: darkgrey;
+  background-color: var(--greyBlue);
   color: white;
-  border: 2px solid darkgrey;
+  border: 2px solid var(--greyBlue);
 }
 
 .SignupFormSubmitButton:hover {
   transition: all 0.4s ease 0s;
-  background-color: grey;
+  background-color: var(--brightBlue);
   cursor: pointer;
 }
 
@@ -72,7 +75,7 @@
 }
 
 .SignupFormSignup > a {
-  color: darkblue;
+  color: var(--darkBlue);
   text-decoration: none;
 }
 
@@ -91,6 +94,6 @@
 
 .SignupFormIcon:hover {
   transition: all 0.4s ease 0s;
-  color: darkgrey;
+  color: var(--greyBlue);
   cursor: pointer;
 }
