--- a/frontend/src/components/HostingFormModal/HostingForm.css
+++ b/frontend/src/components/HostingFormModal/HostingForm.css
@@ -1,6 +1,6 @@
 @import "../styles.css";
 
-.SignupFormContainer {
+.HostingFormContainer {
   background-color: var(--lightBlue);
   color: white;
   width: 300px;
@@ -9,7 +9,7 @@
   border-radius: 10px;
 }
 
-.SignupFormErrors {
+.HostingFormErrors {
   width: 90%;
   margin: 10px auto;
   list-style-type: none;
@@ -17,20 +17,17 @@
   padding-left: 0;
 }
 
-.SignupFormTitle {
+.HostingFormTitle {
   margin: 20px 20px;
   font-size: 2.5em;
 }
 
-.SignupForm {
+.HostingForm {
   display: flex;
   flex-direction: column;
 }
 
-.SignupFormUsernameLabel,
-.SignupFormPasswordLabel,
-.SignupFormEmailLabel,
-.SignupFormConfirmPasswordLabel {
+.HostingFormLabel {
   padding: 5px;
   width: 90%;
   margin: 10px auto;
@@ -39,20 +36,14 @@
   background-color: var(--greyBlue);
 }
 
-.SignupFormInputIcon {
-  font-size: large;
-  width: 15%;
-  height: fill;
-}
-
-.SignupFormUsernameInput,
-.SignupFormPasswordInput,
-.SignupFormEmailInput,
-.SignupFormConfirmPasswordInput {
+.HostingFormDescriptionInput,
+.HostingFormLocationInput,
+.HostingFormMapInput,
+.HostingFormPartyInput {
   width: 100%
 }
 
-.SignupFormSubmitButton {
+.HostingFormSubmitButton {
   width: 90%;
   height: 50px;
   font-size: 2em;
@@ -63,37 +54,23 @@
   border: 2px solid var(--greyBlue);
 }
 
-.SignupFormSubmitButton:hover {
+.HostingFormSubmitButton:hover {
   transition: all 0.4s ease 0s;
   background-color: var(--brightBlue);
   cursor: pointer;
 }
 
-.SignupFormSignup {
+.HostingFormView {
   width: 90%;
   margin: 10px auto;
 }
 
-.SignupFormSignup > a {
+.HostingFormView > a {
   color: var(--darkBlue);
   text-decoration: none;
 }
 
-.SignupFormSignup > a:hover {
+.HostingFormView > a:hover {
   text-decoration: underline;
-  cursor: pointer;
-}
-
-.SignupFormIcons {
-  font-size: 3em;
-  display: flex;
-  justify-content: space-around;
-  width: 75%;
-  margin: 20px auto;
-}
-
-.SignupFormIcon:hover {
-  transition: all 0.4s ease 0s;
-  color: var(--greyBlue);
   cursor: pointer;
 }
