add extended crud features for sessions

--- a/frontend/src/components/HostingFormModal/HostingForm.css
+++ b/frontend/src/components/HostingFormModal/HostingForm.css
@@ -36,6 +36,7 @@
   background-color: var(--greyBlue);
 }
 
+.HostingFormNameInput,
 .HostingFormDescriptionInput,
 .HostingFormLocationInput,
 .HostingFormMapInput,
