--- a/frontend/src/components/HostingFormEditModal/HostingFormEdit.css
+++ b/frontend/src/components/HostingFormEditModal/HostingFormEdit.css
@@ -75,3 +75,22 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+.HostingFormActualButton {
+  width: 100%;
+  height: 40px;
+  font-size: 1em;
+  border-radius: 8px;
+  margin: 0 auto;
+  background-color: #e25f6a;
+  color: white;
+  border: 2px solid #e25f6a;
+  font-weight: bold;
+}
+
+.HostingFormActualButton:hover {
+  transition: all 0.4s ease 0s;
+  color: #e25f6a;
+  background-color: white;
+  cursor: pointer;
+}
