--- a/frontend/src/components/Hosting/Hosting.css
+++ b/frontend/src/components/Hosting/Hosting.css
@@ -56,7 +56,7 @@
 
 .HostingPageExampleName {
   padding: 10px;
-  width: 100%;
+  width: 500px;
   font-size: 3em;
   margin: 100px;
   position: relative;
@@ -97,4 +97,21 @@
 
 .HostingPageYourSessions {
   height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-rows: 435px 435px;
+  grid-gap: 0;
+  overflow-x: hidden;
+}
+
+.HostingPageYourSessions > a{
+  text-decoration: none;
+}
+
+.HostingPageYourSessionsTitle {
+  color: white;
+  font-size: 60px;
+  margin: 30px;
+  width: 500px;
+  background-color: var(--darkBlue);
 }
