--- a/frontend/src/components/SingleSession/SingleSession.css
+++ b/frontend/src/components/SingleSession/SingleSession.css
@@ -7,12 +7,14 @@ body {
 .SingleSessionContainer {
   background-color: var(--brightBlue);
   position: absolute;
-  top: 80px;
-  height: 100vh;
+  /* top: 80px; */
+  /* height: 100vh; */
   width: 100%;
   z-index: -1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 
 }
 
@@ -21,9 +23,10 @@ body {
   width: 50%;
   background-color: var(--darkBlue);
   color: white;
-  position: absolute;
+  position: relative;
   display: flex;
   padding: 20px;
+  margin-bottom: 5px;
 }
 
 .SingleSessionInfo {
@@ -34,7 +37,7 @@ body {
 
 .SingleSessionMap {
   width: 50%;
-  height: 100%;
+  height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -45,7 +48,8 @@ body {
 
 .HostingFormActualButton,
 .SingleSessionRemoveButton,
-.SingleSessionJoinButton {
+.SingleSessionJoinButton,
+.SingleSessionJoinButtonDisabled {
   width: 110px;
   height: 40px;
   font-size: 1em;
@@ -58,6 +62,14 @@ body {
   position: absolute;
   bottom: 25px;
   right: 25px;
+}
+
+.SingleSessionJoinButtonDisabled {
+  width: 200px;
+  height: 40px;
+  color: #e25f6a;
+  background-color: white;
+  cursor: pointer;
 }
 
 .SingleSessionRemoveButton {
@@ -78,12 +90,27 @@ body {
 }
 
 .SingleSessionReviewsContainer {
-  position: absolute;
-  top: 530px;
+  position: relative;
+  /* top: 530px; */
   height: 2000px;
   width: 50%;
   padding: 20px;
   background-color: var(--darkBlue);
   color: white;
   margin-bottom: 50px;
+}
+
+.SingleSessionCharacters {
+  position: relative;
+  /* top: 530px; */
+  height: 100%;
+  width: 50%;
+  padding: 20px;
+  background-color: var(--darkBlue);
+  color: white;
+  margin-bottom: 5px;
+}
+
+.MyCharacters {
+  height: 100px;
 }
