add styling for characters, party and minor fixes

--- a/frontend/src/components/Hosting/Hosting.css
+++ b/frontend/src/components/Hosting/Hosting.css
@@ -1,7 +1,11 @@
 @import "../styles.css";
 
-.HostingPage {
+body {
+  margin-top: 0;
+}
 
+.HostingPage {
+  margin-top: -80px;
 }
 
 .HostingPageHeaderContainer,
