--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -8,6 +8,9 @@
   padding: 8px 20px;
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 3;
 }
 
 .NavHome {
@@ -19,11 +22,12 @@
 
 .NavHomeInvisible {
   color: pink;
-  position: absolute;
   font-size: 35px;
-  margin-top: 40px;
-  margin-left: 50px;
-  z-index: 1;
+  margin-top: 50px;
+  margin-left: 100px;
+  position: fixed;
+  top: 0;
+  z-index: 3;
 }
 
 .NavHomeInvisible > a {
@@ -112,6 +116,10 @@
   right: 120px;
   border-radius: 10px;
   box-shadow: 0 1px 3px white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .hidden {
@@ -138,4 +146,9 @@
   color: #e25f6a;
   background-color: white;
   cursor: pointer;
+}
+
+.profile-dropdown > li > a {
+  text-decoration: none;
+  color: white;
 }
