--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -152,3 +152,23 @@
   text-decoration: none;
   color: white;
 }
+
+.UserButton {
+  width: 80px;
+  height: 40px;
+  font-size: 1em;
+  border-radius: 8px;
+  margin: 0 auto;
+  background-color: #e25f6a;
+  color: white;
+  border: 2px solid #e25f6a;
+  font-weight: bold;
+  right: 135px;
+}
+
+.UserButton:hover {
+  transition: all 0.4s ease 0s;
+  color: #e25f6a;
+  background-color: white;
+  cursor: pointer;
+}
